# RAT-discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: cd.rs  ls.rs  mod.rs  openurl.rs  ping.rs  pwd.rs  screenshot.rs  sendfile.rs
src/dowithsys/: mod.rs
