[package]
name = "RAT-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
serde_json = "1.0.99"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
xcap = "0.0.8"
bytes = "1.6.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"